Crash | Mataflow Liquid Sim | when using Obstacle with Armature and Sampling Substeps > 0 #75111

Closed
opened 2020-03-26 18:40:44 +01:00 by Michał Wieczorek · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-26 09:19, hash: c547d431eb
Worked: (newest version of Blender that worked as expected)

Short description of error
When there is an object with armature (set to obstacle) and there is Sampling Substeps option enabled (with value more than 0) blender crashes on the beginning of fluid simulation. 0%

Exact steps for others to reproduce the error
Create basic Liquid Simulation environment.
Add obstacle with animated armature
set sampling substeps to for example 2
start liquid simulation
[Based on the default startup or an attached .blend file (as simple as possible)]bug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-26 09:19, hash: `c547d431eb` Worked: (newest version of Blender that worked as expected) **Short description of error** When there is an object with armature (set to obstacle) and there is Sampling Substeps option enabled (with value more than 0) blender crashes on the beginning of fluid simulation. 0% **Exact steps for others to reproduce the error** Create basic Liquid Simulation environment. Add obstacle with animated armature set sampling substeps to for example 2 start liquid simulation [Based on the default startup or an attached .blend file (as simple as possible)][bug.blend](https://archive.blender.org/developer/F8429044/bug.blend)

Added subscriber: @michal1000w

Added subscriber: @michal1000w
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

It crashes while baking

Blender[33943:176066] [AudioHAL_Client] HALC_ProxyIOContext.cpp:1399:IOWorkLoop:  HALC_ProxyIOContext::IOWorkLoop: failed to send the final message to the server, Error: 0x10000003
(lldb) 
- 0    bb_combineMaps at source/blender/blenkernel/intern/fluid.c:792
- 1    update_obstacles at source/blender/blenkernel/intern/fluid.c:1301
- 2    manta_step at source/blender/blenkernel/intern/fluid.c:3590
- 3    BKE_fluid_modifier_processDomain at source/blender/blenkernel/intern/fluid.c:4002
- 4    BKE_fluid_modifier_process at source/blender/blenkernel/intern/fluid.c:4034
- 5    BKE_fluid_modifier_do at source/blender/blenkernel/intern/fluid.c:4046
- 6    applyModifier at source/blender/modifiers/intern/MOD_fluid.c:119
- 7    modwrap_applyModifier at source/blender/blenkernel/intern/modifier.c:960
- 8    mesh_calc_modifiers at source/blender/blenkernel/intern/DerivedMesh.c:1179
- 9    mesh_build_data at source/blender/blenkernel/intern/DerivedMesh.c:1767
- 10	  makeDerivedMesh at source/blender/blenkernel/intern/DerivedMesh.c:1900
- 11	  BKE_object_handle_data_update at source/blender/blenkernel/intern/object_update.c:193
- 12	  BKE_object_eval_uber_data at source/blender/blenkernel/intern/object_update.c:385
- 13	  decltype(std::__1::forward<void (*&)(Depsgraph*, Scene*, Object*)>(fp)(std::__1::forward<Depsgraph*>(fp0), std::__1::forward<Scene*&>(fp0), std::__1::forward<Object*&>(fp0))) std::__1::__invoke<void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&>(void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*&&, Scene*&, Object*&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/type_traits:4339
- 14	  std::__1::__bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&>, __is_valid_bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&> >::value>::type std::__1::__apply_functor<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, 0ul, 1ul, 2ul, std::__1::tuple<Depsgraph*&&> >(void (*&)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>&, std::__1::__tuple_indices<0ul, 1ul, 2ul>, std::__1::tuple<Depsgraph*&&>&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:2216
- 15	  std::__1::__bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&>, __is_valid_bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&> >::value>::type std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>::operator()<Depsgraph*>(Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:2249
- 16	  decltype(std::__1::forward<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&>(fp)(std::__1::forward<Depsgraph*>(fp0))) std::__1::__invoke<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*>(std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/type_traits:4339
- 17	  void std::__1::__invoke_void_return_wrapper<void>::__call<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*>(std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/__functional_base:349
- 18	  std::__1::__function::__func<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>, std::__1::allocator<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&> >, void (Depsgraph*)>::operator()(Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:1562
- 19	  std::__1::function<void (Depsgraph*)>::operator()(Depsgraph*) const at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:1913
- 20	  DEG::(anonymous namespace)::evaluate_node(DEG::(anonymous namespace)::DepsgraphEvalState const*, DEG::OperationNode*) at source/blender/depsgraph/intern/eval/deg_eval.cc:116
- 21	  DEG::(anonymous namespace)::deg_task_run_func(TaskPool*, void*, int) at source/blender/depsgraph/intern/eval/deg_eval.cc:127
- 22	  handle_local_queue [inlined] at source/blender/blenlib/intern/task.c:420
- 23	  BLI_task_pool_work_and_wait at source/blender/blenlib/intern/task.c:944
- 24	  DEG::deg_evaluate_on_refresh(DEG::Depsgraph*) at source/blender/depsgraph/intern/eval/deg_eval.cc:406
- 25	  ::DEG_evaluate_on_framechange(Main *, Depsgraph *, float) at source/blender/depsgraph/intern/depsgraph_eval.cc:83
- 26	  BKE_scene_graph_update_for_newframe at source/blender/blenkernel/intern/scene.c:1388
- 27	  ED_update_for_newframe at source/blender/editors/screen/screen_edit.c:1568
- 28	  fluid_bake_sequence at source/blender/editors/physics/physics_fluid.c:307
- 29	  fluid_bake_startjob at source/blender/editors/physics/physics_fluid.c:446
- 30	  do_job_thread at source/blender/windowmanager/intern/wm_jobs.c:396
- 31	  tslot_thread_start at source/blender/blenlib/intern/threads.c:260
It crashes while baking ```lines=6 Blender[33943:176066] [AudioHAL_Client] HALC_ProxyIOContext.cpp:1399:IOWorkLoop: HALC_ProxyIOContext::IOWorkLoop: failed to send the final message to the server, Error: 0x10000003 (lldb) - 0 bb_combineMaps at source/blender/blenkernel/intern/fluid.c:792 - 1 update_obstacles at source/blender/blenkernel/intern/fluid.c:1301 - 2 manta_step at source/blender/blenkernel/intern/fluid.c:3590 - 3 BKE_fluid_modifier_processDomain at source/blender/blenkernel/intern/fluid.c:4002 - 4 BKE_fluid_modifier_process at source/blender/blenkernel/intern/fluid.c:4034 - 5 BKE_fluid_modifier_do at source/blender/blenkernel/intern/fluid.c:4046 - 6 applyModifier at source/blender/modifiers/intern/MOD_fluid.c:119 - 7 modwrap_applyModifier at source/blender/blenkernel/intern/modifier.c:960 - 8 mesh_calc_modifiers at source/blender/blenkernel/intern/DerivedMesh.c:1179 - 9 mesh_build_data at source/blender/blenkernel/intern/DerivedMesh.c:1767 - 10 makeDerivedMesh at source/blender/blenkernel/intern/DerivedMesh.c:1900 - 11 BKE_object_handle_data_update at source/blender/blenkernel/intern/object_update.c:193 - 12 BKE_object_eval_uber_data at source/blender/blenkernel/intern/object_update.c:385 - 13 decltype(std::__1::forward<void (*&)(Depsgraph*, Scene*, Object*)>(fp)(std::__1::forward<Depsgraph*>(fp0), std::__1::forward<Scene*&>(fp0), std::__1::forward<Object*&>(fp0))) std::__1::__invoke<void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&>(void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*&&, Scene*&, Object*&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/type_traits:4339 - 14 std::__1::__bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&>, __is_valid_bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&> >::value>::type std::__1::__apply_functor<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, 0ul, 1ul, 2ul, std::__1::tuple<Depsgraph*&&> >(void (*&)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>&, std::__1::__tuple_indices<0ul, 1ul, 2ul>, std::__1::tuple<Depsgraph*&&>&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:2216 - 15 std::__1::__bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&>, __is_valid_bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&> >::value>::type std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>::operator()<Depsgraph*>(Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:2249 - 16 decltype(std::__1::forward<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&>(fp)(std::__1::forward<Depsgraph*>(fp0))) std::__1::__invoke<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*>(std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/type_traits:4339 - 17 void std::__1::__invoke_void_return_wrapper<void>::__call<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*>(std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/__functional_base:349 - 18 std::__1::__function::__func<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>, std::__1::allocator<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&> >, void (Depsgraph*)>::operator()(Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:1562 - 19 std::__1::function<void (Depsgraph*)>::operator()(Depsgraph*) const at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:1913 - 20 DEG::(anonymous namespace)::evaluate_node(DEG::(anonymous namespace)::DepsgraphEvalState const*, DEG::OperationNode*) at source/blender/depsgraph/intern/eval/deg_eval.cc:116 - 21 DEG::(anonymous namespace)::deg_task_run_func(TaskPool*, void*, int) at source/blender/depsgraph/intern/eval/deg_eval.cc:127 - 22 handle_local_queue [inlined] at source/blender/blenlib/intern/task.c:420 - 23 BLI_task_pool_work_and_wait at source/blender/blenlib/intern/task.c:944 - 24 DEG::deg_evaluate_on_refresh(DEG::Depsgraph*) at source/blender/depsgraph/intern/eval/deg_eval.cc:406 - 25 ::DEG_evaluate_on_framechange(Main *, Depsgraph *, float) at source/blender/depsgraph/intern/depsgraph_eval.cc:83 - 26 BKE_scene_graph_update_for_newframe at source/blender/blenkernel/intern/scene.c:1388 - 27 ED_update_for_newframe at source/blender/editors/screen/screen_edit.c:1568 - 28 fluid_bake_sequence at source/blender/editors/physics/physics_fluid.c:307 - 29 fluid_bake_startjob at source/blender/editors/physics/physics_fluid.c:446 - 30 do_job_thread at source/blender/windowmanager/intern/wm_jobs.c:396 - 31 tslot_thread_start at source/blender/blenlib/intern/threads.c:260 ```

This issue was referenced by 5ce41e6f57

This issue was referenced by 5ce41e6f5706d4396c518be6e71e299ef95936ac
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-03-27 12:33:59 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75111
No description provided.